# python-door

./: .gitignore  README.md  pyproject.toml
.lingma/rules/: project_rule.md
src/term2/: cli.py  task_manager.py  tasks.json
src/webserver/: .env  __init__.py  app.py  web_readme.md
src/webserver/common/: __init__.py
src/webserver/config/: __init__.py  app_config.py  db_configuration.py  web_config.py
src/webserver/controllers/: __init__.py  module_web_controller.py  modulewebcontroller.py  web_controller.py  webcontroller.py
src/webserver/db/: dbconfiguration.py
src/webserver/db/models/: user.py
src/webserver/repository/models/: __init__.py  user.py
src/webserver/service/: __init__.py  userservice.py
tests/: test_webcontroller.py
